Fixed more warnings with anchors and fixed alignment as well as changed all bisque usages to rgb(247, 235, 221)

--- a/frontend/src/styles/Models.css
+++ b/frontend/src/styles/Models.css
@@ -1,43 +1,43 @@
 .headerCardStyle {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .header-img-style {
-    align-items: center;
-    justify-content: center !important;
-    object-fit: cover !important;
-    width: 100% !important;
-    height: 500px !important;
-    margin-bottom: 0px !important;
-    margin-top: 0px !important;
-    display: block !important;
-    opacity: 0.1 !important;
+  align-items: center;
+  justify-content: center !important;
+  object-fit: cover !important;
+  width: 100% !important;
+  height: 500px !important;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+  display: block !important;
+  opacity: 0.1 !important;
 }
 
 .header-text-style {
-    text-shadow: 1px 1px 3px black;
-    font-size: 20rem !important;
-    color: white !important;
-    width: 100%;
+  text-shadow: 1px 1px 3px black;
+  font-size: 20rem !important;
+  color: white !important;
+  width: 100%;
 }
 
 .rowStyle {
-    margin-top: 4;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+  margin-top: 4;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
-.subtitleTextStyle{
-    text-shadow: 1px 1px 3px black;
-    color: white;
-    width: 100%;
+.subtitleTextStyle {
+  text-shadow: 1px 1px 3px black;
+  color: white;
+  width: 100%;
 }
 
-.buttonStyle  {
-    color: white;
-    opacity: 0.7;
+.buttonStyle {
+  color: white;
+  opacity: 0.7;
 }
 
 /* #grad {
@@ -56,8 +56,6 @@
     margin-left: 90px;
 } */
 
-
-
 /* .model-container {
     border-radius: 10px;
     position:relative;
@@ -65,94 +63,92 @@
 } */
 
 .model-container img {
-    display: block;
-    transition: transform .4s;   /* smoother zoom */
+  display: block;
+  transition: transform 0.4s; /* smoother zoom */
 }
 .model-container:hover img {
-    transform: scale(1.3);
-    /* transform-origin: 50% 50%; */
+  transform: scale(1.3);
+  /* transform-origin: 50% 50%; */
 }
 
 .models-text {
-    /* text-align: center; */
-    color: #400801;
-    font-size: 40px;
-    margin-left: 200px;
-    /* margin-right: 200px; */
+  /* text-align: center; */
+  color: #400801;
+  font-size: 40px;
+  margin-left: 200px;
+  /* margin-right: 200px; */
 }
 
 .cities-text {
-    /* text-align: left; */
-    color: #400801;
-    font-size: 40px;
-    /* margin-left: 100; */
-    margin-right: 90px;
+  /* text-align: left; */
+  color: #400801;
+  font-size: 40px;
+  /* margin-left: 100; */
+  margin-right: 90px;
 }
 
 .image-content {
-    overflow: hidden;
+  overflow: hidden;
 }
 
-.purpose-header{
-    font-size: 30px;
+.purpose-header {
+  font-size: 30px;
 }
 
 .hero-section {
-    background-color: bisque;
+  background-color: rgb(247, 235, 221);
 }
-  
+
 .heading {
-    color:#400801;
-    padding-top: 2rem;  
-    /* padding-right: 5rem; */
-    padding-bottom: 1rem;
-    border-bottom: 2px solid;
-    font-weight: bold;
-/* max-width: 51%; */
+  color: #400801;
+  padding-top: 2rem;
+  /* padding-right: 5rem; */
+  padding-bottom: 1rem;
+  border-bottom: 2px solid;
+  font-weight: bold;
+  /* max-width: 51%; */
 }
 
 .heading-content {
-    margin-left: 5rem;
-    font-weight: bold;
+  margin-left: 5rem;
+  font-weight: bold;
 }
 
 .subheading {
-    color: rgba(170, 205, 189, 0.9);
-    font-weight: bold;
-    padding-top: 1rem;
+  color: rgba(170, 205, 189, 0.9);
+  font-weight: bold;
+  padding-top: 1rem;
 }
 .image-1 {
-    padding-top: 5rem;
-    width: 9rem;
-    margin-left: 2rem;
+  padding-top: 5rem;
+  width: 9rem;
+  margin-left: 2rem;
 }
 .image-2 {
-    width: 5rem;
-    margin-right: 2rem;
+  width: 5rem;
+  margin-right: 2rem;
 }
 
 .img-cont {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .image {
-    margin-left: 5rem;
-    top: 0;
-    width: 50%;
-    height: 80%;
-    object-fit: cover;
+  margin-left: 5rem;
+  top: 0;
+  width: 50%;
+  height: 80%;
+  object-fit: cover;
 }
 
-
-.nav-link{
-    color: rgba(170, 109, 79, 0.9);
-    text-decoration: none;
+.nav-link {
+  color: rgba(170, 109, 79, 0.9);
+  text-decoration: none;
 }
-
 
 .active {
-    color: red;
-    text-decoration: none;
+  color: red;
+  text-decoration: none;
 }
 
 /* 
@@ -186,21 +182,20 @@
 } */
 
 .a-custom {
-    text-decoration: none;
-    background-image: linear-gradient(currentColor, currentColor);
-    background-position: 0% 100%;
-    background-repeat: no-repeat;
-    background-size: 0% 2px;
-    transition: background-size cubic-bezier(0,.5,0,1) 0.3s;
+  text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size cubic-bezier(0, 0.5, 0, 1) 0.3s;
 }
-  
+
 .a-custom:hover,
 .a-custom:focus {
-text-decoration: none;
-background-size: 100% 2px;
+  text-decoration: none;
+  background-size: 100% 2px;
 }
-  
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
